--- a/keycloak-config/bootstrap/terraform.tfvars.example
+++ b/keycloak-config/bootstrap/terraform.tfvars.example
@@ -3,6 +3,9 @@ keycloak_admin_realm    = "master"
 keycloak_admin_username = "admin"
 keycloak_admin_password = "replace-me"
 
+bootstrap_realm_name         = "terraform"
+bootstrap_realm_display_name = "Terraform Realm"
+
 terraform_client_id   = "terraform"
 terraform_client_name = "Terraform Provisioner"
 
@@ -11,6 +14,8 @@ realm_management_roles = [
   "view-realm",
   "manage-clients",
   "manage-users",
+  "manage-identity-providers",
+  "manage-realm",
 ]
 
 client_secret_override = null
