--- a/keycloak-config/envs/prd/terraform.tfvars.example
+++ b/keycloak-config/envs/prd/terraform.tfvars.example
@@ -1,7 +1,9 @@
 keycloak_url           = "https://keycloak.prd.example.com"
-keycloak_auth_realm    = "terraform"
-keycloak_client_id     = "terraform"
-keycloak_client_secret = "replace-me"
+# Optional: override if you don't want to use bootstrap realm output.
+# keycloak_auth_realm    = "terraform"
+# Optional: override if you don't want to use bootstrap outputs.
+# keycloak_client_id     = "terraform"
+# keycloak_client_secret = "replace-me"
 
 bootstrap_state_bucket     = "keycloak-terraform-state"
 bootstrap_state_key        = "bootstrap/terraform.tfstate"
