Add mapping file examples for tfvars

--- a/keycloak-config/prd/terraform.tfvars.example
+++ b/keycloak-config/prd/terraform.tfvars.example
@@ -48,7 +48,8 @@ clients = {
         config = {
           "source.user.attribute"       = "dept_code"
           "target.claim.name"           = "dept"
-          "mapping.inline"              = "A01:finance,A02:people"
+          "mapping.inline"              = ""
+          "mapping.file"                = "mappings/dept_code.json"
           "mapping.client.autoKey"      = "true"
           "mapping.client.key"          = "dept.map"
           "fallback.original"           = "true"
