Add user info sync SPI module

--- a/spi/pom.xml
+++ b/spi/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>terms-ra</module>
     <module>claim-mappers</module>
+    <module>user-info-sync</module>
   </modules>
 
   <properties>
