Add approval logic

--- a/keycloak-config/dev/terraform.tfvars.example
+++ b/keycloak-config/dev/terraform.tfvars.example
@@ -11,11 +11,13 @@ bootstrap_state_region     = "us-east-1"
 bootstrap_state_endpoint   = "https://minio.example.com"
 bootstrap_state_access_key = "minio"
 bootstrap_state_secret_key = "minio123"
+approval_portal_url = "https://approval.dev.example.com"
 
 clients = {
   app = {
     client_id     = "app"
     name          = "Sample App"
+    auto_approve  = true
     root_url      = "https://app.dev.example.com"
     redirect_uris = ["https://app.dev.example.com/*"]
     web_origins   = ["https://app.dev.example.com"]
@@ -99,6 +101,7 @@ clients = {
   app_secondary = {
     client_id     = "app-secondary"
     name          = "Sample App Secondary"
+    auto_approve  = false
     root_url      = "https://app2.dev.example.com"
     redirect_uris = ["https://app2.dev.example.com/*"]
     web_origins   = ["https://app2.dev.example.com"]
