--- a/spi-modules/access-approval-action/pom.xml
+++ b/spi-modules/access-approval-action/pom.xml
@@ -5,12 +5,12 @@
 
   <parent>
     <groupId>com.example.keycloak</groupId>
-    <artifactId>keycloak-spi-parent</artifactId>
+    <artifactId>keycloak-spi</artifactId>
     <version>1.0.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>claim-mappers</artifactId>
+  <artifactId>access-approval-action</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
 
@@ -31,4 +31,30 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <id>copy-jar-to-spi-providers</id>
+            <phase>package</phase>
+            <configuration>
+              <target>
+                <mkdir dir="${maven.multiModuleProjectDirectory}/target/providers"/>
+                <copy file="${project.build.directory}/${project.build.finalName}.jar"
+                      todir="${maven.multiModuleProjectDirectory}/target/providers"/>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
