--- a/spi-modules/pom.xml
+++ b/spi-modules/pom.xml
@@ -4,14 +4,15 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example.keycloak</groupId>
-  <artifactId>keycloak-spi-parent</artifactId>
+  <artifactId>keycloak-spi</artifactId>
   <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <modules>
-    <module>terms-ra</module>
+    <module>terms-action</module>
     <module>claim-mappers</module>
-    <module>user-info-sync</module>
+    <module>userinfo-sync</module>
+    <module>access-approval-action</module>
   </modules>
 
   <properties>
@@ -50,7 +51,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.12.1</version>
+          <version>3.13.0</version>
           <configuration>
             <release>${java.version}</release>
           </configuration>
