--- a/spi-modules/userinfo-sync/pom.xml
+++ b/spi-modules/userinfo-sync/pom.xml
@@ -5,12 +5,12 @@
 
   <parent>
     <groupId>com.example.keycloak</groupId>
-    <artifactId>keycloak-spi-parent</artifactId>
+    <artifactId>keycloak-spi</artifactId>
     <version>1.0.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>terms-ra</artifactId>
+  <artifactId>userinfo-sync</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
 
@@ -29,6 +29,11 @@
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-services</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.17.2</version>
     </dependency>
   </dependencies>
 </project>
